# medbot

./: README.md
adc_mux_node/: CMakeLists.txt  package.xml~
adc_mux_node/config/: adc_mux.yaml~  adc_mux_node.yaml~  imu_bosch.yaml~
adc_mux_node/launch/: adc_mux.launch  adc_mux.launch~  imu.launch~
adc_mux_node/nodes/: adc_mux_node.py~  bosch_imu_node.py~
bosch_imu_node/: CMakeLists.txt  CMakeLists.txt~  package.xml~
bosch_imu_node/config/: imu_bosch (copy).yaml  imu_bosch.yaml~
bosch_imu_node/launch/: imu.launch
bosch_imu_node/nodes/: .bosch_imu_node.py.swp  bosch_imu_node.py~
bosch_imu_node/scripts/: calibrate_bosch_imu.py  imu.sh  imu.sh~
breaker_board_node/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  setup.py
breaker_board_node/config/: breaker_board.yaml  breaker_board.yaml~
breaker_board_node/launch/: breaker_board.launch
breaker_board_node/nodes/: breaker_board.py  breaker_board.py~
breaker_board_node/scripts/: fan_breaker_enabler.py~  kinect_breaker_enabler.py  kinect_breaker_enabler.py~
breaker_board_node/srv/: SetBreakerOutputs.srv
create_autonomy/ca_bumper2pc/: CMakeLists.txt
create_autonomy/ca_bumper2pc/launch/: standalone.launch~
create_autonomy/ca_description/urdf/: create_base.urdf.xacro
create_autonomy/ca_msgs/: CMakeLists.txt
create_autonomy/ca_node/: CMakeLists.txt~  package.xml
create_autonomy/ca_node/include/ca_node/: create_driver.h~
create_autonomy/ca_node/src/nodelet/: CMakeLists.txt~  ca_nodelet.cpp  ca_nodelet.cpp~
create_autonomy/create_autonomy/: package.xml
libcreate/: CMakeLists.txt  package.xml  package.xml~
libcreate/examples/: create_demo.cpp
libcreate/include/create/: create.h
libcreate/src/: create.cpp~  create1.cpp
lv_maxsonar_node/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
lv_maxsonar_node/launch/: ultrasonic.launch
lv_maxsonar_node/nodes/: lv_maxsonar_node.py  lv_maxsonar_node.py~
openni_tracker/src/: openni_tracker.cpp  openni_tracker.cpp~
pi_tracker/launch/: .tracker.launch.swp  skeleton.launch  skeleton.launch~  tracker.launch  tracker.launch~
pi_tracker/nodes/: tracker_base_controller.py~  tracker_command.py
pi_tracker/params/: SamplesConfig.xml  tracker_params.yaml~
skeleton_markers/launch/: markers.launch  markers_from_tf.launch  skeleton (copy).launch  skeleton.launch  skeleton.launch~
skeleton_markers/params/: marker_params.yaml
skeleton_markers/src/: skeleton_tracker.cpp  skeleton_tracker.cpp~
turtlebot/turtlebot_bringup/launch/includes/3dsensor/: kinect.launch.xml~  r200.launch (another copy).xml  r200.launch (copy).xml
turtlebot/turtlebot_bringup/launch/includes/create_2/: bumper2pc.launch.xml~  mobile_base.launch (copy).xml  mobile_base.launch(node).xml  mobile_base.launch.xml~  (+3 more)
turtlebot/turtlebot_bringup/param/create_2/: diagnostics.yaml
turtlebot/turtlebot_description/robots/: create_2_circles_r200.urdf.xacro~  create_2_med_hull_r200.urdf.xacro  create_2_minimal_r200.urdf.xacro
turtlebot/turtlebot_description/urdf/: turtlebot_library.urdf.xacro~
turtlebot/turtlebot_description/urdf/sensors/: med_kinect.urdf.xacro~  med_r200.urdf.xacro  r200.urdf.xacro  r200.urdf.xacro~
turtlebot/turtlebot_description/urdf/stacks/: med_hull.urdf.xacro~  med_hull.xacro~
turtlebot_apps/turtlebot_follower_find_object_2d/: CMakeLists.txt  package.xml~
turtlebot_apps/turtlebot_follower_find_object_2d/cfg/: Follower.cfg~
turtlebot_apps/turtlebot_follower_find_object_2d/launch/: follower.launch  follower.launch~
turtlebot_apps/turtlebot_follower_find_object_2d/src/: follower.cpp
turtlebot_apps/turtlebot_follower_nite/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
turtlebot_apps/turtlebot_follower_nite/cfg/: Follower.cfg  Follower.cfg~
turtlebot_apps/turtlebot_follower_nite/include/: follower.h  follower.h~
turtlebot_apps/turtlebot_follower_nite/launch/: follower.launch  follower.launch~
turtlebot_apps/turtlebot_follower_nite/src/: follower.cpp  follower.cpp~
turtlebot_apps/turtlebot_navigation/launch/: amcl_demo.launch  amcl_demo.launch~  gmapping_demo.launch~
turtlebot_apps/turtlebot_navigation/param/: costmap_common_params.yaml  costmap_common_params.yaml~  local_costmap_params.yaml~
turtlebot_apps/turtlebot_navigation/param/backup/: costmap_common_params (copy).yaml~
turtlebot_create_desktop/create_2_dashboard/: CMakeLists.txt  CMakeLists.txt~  package.xml~  setup.py
turtlebot_create_desktop/create_2_dashboard/plugins/: plugin.xml~
turtlebot_create_desktop/create_2_dashboard/scripts/: create_2_dashboard
turtlebot_create_desktop/create_2_dashboard/src/create_2_dashboard/: battery.py  battery.py~  breaker.py  buzzer.py~  dashboard.py  dock (copy).py  dock.py  motor.py~
turtlebot_create_desktop/create_dashboard/src/create_dashboard/: dashboard.py  dashboard.py~  motor.py~  motor_pwm.py
turtlebot_interactions/turtlebot_dashboard/launch/create_2/: dashboard.launch.xml
(+4 files in other folders)
