<?xml version="1.0"?>
<package>
  <name>libcreate</name>
  <version>1.1.0</version>
  <description>C++ driver for iRobot's Create 1 and 2</description>

  <maintainer email="jperron@sfu.ca">Jacob Perron</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ca_driver</url>
  
  <author email="jperron@sfu.ca">Jacob Perron</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
